--- a/views/activity/search.ejs
+++ b/views/activity/search.ejs
@@ -101,31 +101,41 @@
             <input class="form-control mr-sm-2 search-input" type="text" placeholder="Search" name='search' value='<%= search %>'>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
-          <div class="d-flex flex-column justify-content-center align-items-start">
-            <div class="activity">
-              <% if(posts) { %>
-                <% posts.forEach((post) => { %>
-                  <div class="activity">
-                    <h1 class='heading-1'><%= post.title %></h1>
-
-                    <% if(post.image){ %>
-                      <img class='img' src='data:image/<%= post.image.contentType%>;base64,<%= post.image.data.toString('base64')%>' alt='img'>
-                    <%} else{ %>
-                      <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="img" alt="images">
-                    <% } %>
+          <% if(posts){ %>
+            <% posts.forEach((post) => { %>
+            
+            <div class="activity mt-2 mt-md-5">
+              <div class="row justify-content-center align-items-center">
+                  <div class="col-12 col-md-8 order-2 order-lg-1 justify-content-center">
+                    <% if(post.title){ %>
+                      <h1 class='heading-1'><%= post.title %></h1>
+                    <%}%>
                     
-                    <p class='para-1'><%= post.content.slice(0,250) %> ...</p>
-                    <a href='/activity/<%= post._id %>' class='btn button d-block'>Read More</a>
-                    <hr class='rules'>
+                    <% if(post.author){ %>
+                      <p class='author'><em>Posted by <span class='username'><%= post.author.username %></span></em></p>
+                    <%}%>           
+  
+                    <% if(post.content){ %>
+                      <p class='para-1'><%= post.content.slice(0,250) %> ...</p>
+                    <%}%>
+  
+                    <div class="d-flex flex-row justify-content-end">
+                      <a href='/activity/<%= post._id %>' class='btn btn-primary'>Read More</a>
+                    </div>
                   </div>
-                <% }) %>
-              <% } else { %>
-                  <div class="notfound">
-                    <h1 class='text-center'>No matches found. Try a different search...</h1>
+
+                  <div class="col-12 col-md-4 order-1 order-lg-2 justify-content-center">
+                    <% if(post.image) { %>
+                      <img src="data:image/<%= post.image.contentType%>;base64,<%= post.image.data.toString('base64')%>" class="card-img-top" alt="images">
+                      <% } else{ %>
+                        <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="card-img-top" alt="images">
+                      <% } %>
                   </div>
-              <% } %>
-            </div>
-          </div>
+                </div>
+                <hr class='rules mt-2 mt-md-5'>
+              </div>
+              <% }) %>
+          <% } %>
         </div>
       </div>
     </main>
@@ -142,11 +152,11 @@
         <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team and with the help of our contributors.</p>
         <p class='param-footer1'>All right reserved. Beautiful Pangalengan.</p>
         <div class="my-2">
-          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/ugm_rvgujo.png" alt="ugm" class='sponsor-img'>
-          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617819/images/kkn-ppm_jsxtu7.png" alt="kkn-ppm" class='sponsor-img'>
-          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617815/images/ww_czmtk7.png" alt="ww" class='sponsor-img'>
-          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/se_dn4xws.png" alt="se" class='sponsor-img'>
-          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617864/images/geothermal_aqdzuw.png" alt="geothermal" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594958869/images/ugm_se5u8n.png" alt="ugm" class='sponsor-img lazyload'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594958869/images/kkn_a7jdxy.png" alt="kkn-ppm" class='sponsor-img lazyload'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594958868/images/ww_r46z2g.png" alt="ww" class='sponsor-img lazyload'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594958868/images/se_p75fdr.png" alt="se" class='sponsor-img lazyload'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594958869/images/geo_j0ekdx.png" alt="geothermal" class='sponsor-img lazyload'>
         </div>
 
       </div>
@@ -157,6 +167,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+    <!-- lazyloading for img -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.2/lazysizes.min.js" async=""></script>
   </body>
 </html>
