--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,10 +114,10 @@
             <div class="col-12 col-md-3">
               <div class="d-flex align-self-center justify-content-around">
                   <div class="card" style="width: 18rem;">
-                    <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top lazyload" alt="images">
+                    <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594967528/images/Situ-Cileunca_aqusnp.jpg" class="card-img-top lazyload" alt="images">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Situ Cileunca</h5>
+                        <p class="card-text">Merupakan danau buatan seluas 1400 hektar yang terletak di Desa Wanasari Pangalengan</p>
                     </div>
                 </div>
               </div>
@@ -125,10 +125,10 @@
             <div class="col-12 col-md-3">
               <div class="d-flex align-self-center justify-content-around">
                 <div class="card" style="width: 18rem;">
-                  <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top lazyload" alt="images">
+                  <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594967625/images/Jembatan-Cinta_obkshw.jpg" class="card-img-top lazyload" alt="images">
                   <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">Jembatan Cinta</h5>
+                      <p class="card-text">Sangat populer di kalangan Photograper karena lokasinya yang unik berada di tengah-tengah danau Situ Cileunca </p>
                   </div>
                 </div>
               </div>
@@ -136,10 +136,10 @@
             <div class="col-12 col-md-3">
               <div class="d-flex align-self-center justify-content-around">
                 <div class="card" style="width: 18rem;">
-                  <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top lazyload" alt="images">
+                  <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594967705/images/Tour-Pangalengan-L5_msbx9y.jpg" class="card-img-top lazyload" alt="images">
                   <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">Perkebunan Teh Cukul</h5>
+                      <p class="card-text">Cukul memiliki keindahan yang luar biasa, kita akan disuguhkan hamparan bukit-bukit perkebunan teh</p>
                   </div>
                 </div>
               </div>
@@ -147,10 +147,10 @@
             <div class="col-12 col-md-3">
               <div class="d-flex align-self-center justify-content-around">
                   <div class="card" style="width: 18rem;">
-                    <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top lazyload" alt="images">
+                    <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594967776/images/Tour-Pangalengan-L4_m8tjg5.jpg" class="card-img-top lazyload" alt="images">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Rumah Pengabdi Setan</h5>
+                        <p class="card-text">Rumah yang pernah dipakai untuk lokasi shotting film Rumah Pengabdi Setan yang terkenal menegangkan</p>
                     </div>
                 </div>
               </div>
