--- a/views/index.ejs
+++ b/views/index.ejs
@@ -163,7 +163,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-12 col-md-6 content order-2 order-md-1">
-              <h1 class='heading-2'>Photo of the Day</h1>
+              <h1 class='heading-2'>Photo of the Week</h1>
               <p> Explore more in our gallery</p>
               <a href='/gallery' class="btn btn-primary">Gallery</a>
             </div>
