--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,7 +107,7 @@
           <h1 class="heading-1">
             Fantastic Beauty
           </h1>
-          <p class='para-1'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam officiis reiciendis explicabo molestias blanditiis. Blanditiis vel laudantium, amet dicta expedita modi deleniti explicabo hic vitae obcaecati pariatur, iure ad perspiciatis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo sequi, eaque dicta soluta quas earum dolorum maiores accusantium nulla, pariatur hic vel aspernatur! Sint quam adipisci at ullam alias quia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio fugit quod iure perferendis consequatur suscipit, doloribus natus, veritatis repellat, atque fuga! Eveniet commodi, ipsa odit quas neque quos necessitatibus id.</p>
+          <p class='para-1'>Pangalengan menyimpan pesona luar biasa. Perpaduan antara sungai, perkebunan hijau, hutan lindung, dan aneka situ. Keindahan berbalut kesunyian, bagai surga yang tersembunyi. Pangalengan merupakan salah satu kecamatan di Kabupaten Bandung, Jawa Barat yang menyuguhkan panorama keindahan alam yang mempesona. Sebagai basis kawasan wisata, terdapat beberapa eksotisme keindahan alam yang menjadi daya tarik para pengunjung. </p>
         </div>
         <div class='container'>
           <div class='row align-self-center justify-content-around' data-aos="fade-right" data-aos-duration="1000">
@@ -200,7 +200,7 @@
             </div>
             <div class="col-12 col-md-6">
               <h1 class='heading-3'>Why you should visit pangalengan?</h1>
-              <p class = 'param-3'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis animi recusandae itaque fugit ducimus illum doloribus nam odio nisi deleniti sit aperiam veritatis doloremque quis, sint tenetur, perspiciatis repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus debitis commodi ad corporis quod consequatur aperiam, aliquid sapiente quas repellat animi culpa, soluta dolor omnis voluptates sit. Cupiditate, eaque obcaecati</p>
+              <p class = 'param-3'>Diseguhkan alam pengunungan yang masih asri dan hijau dengan suasana desa yang sepi sangat cocok untuk kamu yang ingin lari sejenak dari hiruk pikuk nya perkotaan. Udara yang segar dapat membuat kamu berpikir jernih dan dengan pemandangan yang mempesona akan melupakan sejenak pikiran pikiran yang ada di kota. Kembali dari Pangalengan pasti akan membuat kamu menjadi fresh lagi untuk memulai aktivitas kembali</p>
             </div>
           </div>
         </div>
